--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hellow Coursera!</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hellow Coursera!</h1>
+<h1>Helleo Nabila!</h1>
 </body>
 </html>
